--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -16,6 +16,7 @@
     <item name="c8c8c8" type="color">#c8c8c8</item>
     <item name="custom_515151" type="color">#515151</item>
     <item name="custom_555555" type="color">#555555</item>
+    <item name="custom_666666" type="color">#666666</item>
     <item name="custom_e5e5e5" type="color">#e5e5e5</item>
     <item name="custom_999999" type="color">#999999</item>
     <item name="custom_4d4d4d" type="color">#4d4d4d</item>
