--- a/app/src/main/res/layout/view_ssom_action_bar.xml
+++ b/app/src/main/res/layout/view_ssom_action_bar.xml
@@ -39,12 +39,24 @@
             android:gravity="center"/>
     </RelativeLayout>
 
-    <TextView
-        android:id="@+id/ssom_bar_title"
+    <LinearLayout
+        android:id="@+id/ssom_bar_title_layout"
         android:layout_toRightOf="@id/btn_left_navi"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_centerVertical="true"/>
+        android:layout_centerVertical="true"
+        android:orientation="horizontal">
+
+        <TextView
+            android:id="@+id/ssom_bar_title"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"/>
+
+        <TextView
+            android:id="@+id/ssom_bar_sub_title"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"/>
+    </LinearLayout>
 
     <TextView
         android:id="@+id/chat_layout"
@@ -96,4 +108,15 @@
             android:layout_height="wrap_content"
             android:layout_gravity="center_horizontal"/>
     </LinearLayout>
+
+    <TextView
+        android:id="@+id/chatting_room_heart"
+        style="@style/ssom_font_12_white_single"
+        android:layout_width="30dp"
+        android:layout_height="27dp"
+        android:layout_marginRight="10dp"
+        android:layout_alignParentRight="true"
+        android:layout_centerVertical="true"
+        android:gravity="center"
+        android:visibility="gone" />
 </RelativeLayout>
