--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -104,7 +104,6 @@
         <item name="android:textSize">12sp</item>
         <item name="android:textColor">@color/white</item>
         <item name="android:typeface">normal</item>
-        <item name="android:lines">2</item>
         <item name="android:maxLines">2</item>
     </style>
 
@@ -165,7 +164,7 @@
         <item name="android:textSize">16sp</item>
         <item name="android:textColor">@color/custom_666666</item>
         <item name="android:typeface">normal</item>
-        <item name="android:lines">2</item>
+        <item name="android:maxLines">2</item>
     </style>
 
     <style name="ssom_font_16_red_pink">
