채팅방 만남정보 추가, layout 일부 수정, Model 형식 변경

--- a/app/src/main/res/layout/fragment_chat_list.xml
+++ b/app/src/main/res/layout/fragment_chat_list.xml
@@ -4,7 +4,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@color/white"
-    tools:context=".fragment.ChatListFragment" >
+    tools:context=".fragment.ChatRoomListFragment" >
 
     <com.ssomcompany.ssomclient.widget.swipelistview.SwipeMenuListView
         android:id="@+id/list_chatting"
