--- a/app/src/main/res/layout/ssom_chat_message_item.xml
+++ b/app/src/main/res/layout/ssom_chat_message_item.xml
@@ -46,12 +46,12 @@
 
             <TextView
                 android:id="@+id/receive_message"
-                style="@style/ssom_font_12_white_2_lines"
+                style="@style/ssom_font_12_white"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:lineSpacingExtra="7sp"
+                android:maxWidth="290dp"
+                android:lineSpacingExtra="5sp"
                 android:padding="10dp"
-                android:ellipsize="end"
                 android:background="@drawable/bg_receive_message_red"
                 android:text="상대방이 쏴인 경우에는 핑크색이고 쏨인경우에는 초\n록색으로 표현되었으면 좋겠습니다..해주세요.."/>
 
@@ -74,36 +74,62 @@
         android:layout_marginRight="7dp"
         android:layout_alignParentRight="true"
         android:orientation="vertical"
-        android:visibility="gone" >
+        android:visibility="visible" >
 
-        <!-- TODO custom textView maxWidth(273dp) and lineSpacing(7sp) -->
+        <!-- TODO custom textView maxWidth(290dp) and lineSpacing(5sp) -->
         <TextView
             android:id="@+id/send_message"
-            style="@style/ssom_font_12_white_2_lines"
+            style="@style/ssom_font_12_white"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:layout_gravity="right"
+            android:maxWidth="290dp"
+            android:lineSpacingExtra="5sp"
             android:padding="10dp"
-            android:ellipsize="end"
             android:background="@drawable/bg_send_message"
-            android:text="가장 긴 길이의 메시지를 보냈을 때 이정도의 길이로 \n표현됩니다. 두줄짜리 샘플이미지에요"/>
+            android:text="가장 긴 길이의 메시지를 보냈을 때 이정도의 길이로 표현됩니다. 두줄짜리 샘플이미지에요"/>
 
         <TextView
             android:id="@+id/send_time"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginLeft="10dp"
+            android:layout_gravity="right"
+            android:layout_marginRight="10dp"
             android:layout_marginTop="3dp"
             android:text="18:04"/>
     </LinearLayout>
 
-    <TextView
+    <LinearLayout
         android:id="@+id/initial_message"
         android:layout_width="match_parent"
         android:layout_height="40dp"
-        android:layout_marginBottom="1dp"
-        android:gravity="center"
-        android:text="두근두근, 대화가 시작 되었쏨 :)"
         android:background="#fcfcfc"
-        android:visibility="gone"/>
+        android:gravity="center"
+        android:orientation="horizontal"
+        android:visibility="gone">
 
+        <TextView
+            style="@style/ssom_font_12_red_pink_single"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:gravity="center"
+            android:text="두근두근, " />
+
+        <TextView
+            style="@style/ssom_font_12_pinkish_gray_two_single"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:gravity="center"
+            android:text="대화가 시작 되었쏨 :)" />
+    </LinearLayout>
+
+    <TextView
+        android:id="@+id/finish_message"
+        style="@style/ssom_font_12_red_pink_single"
+        android:layout_width="match_parent"
+        android:layout_height="40dp"
+        android:gravity="center"
+        android:background="#fcfcfc"
+        android:text="상대방이 쏨을 종료했습니다. (T_T)"
+        android:visibility="gone"/>
 </RelativeLayout>
