--- a/app/src/main/res/layout/fragment_chatting.xml
+++ b/app/src/main/res/layout/fragment_chatting.xml
@@ -49,9 +49,35 @@
         android:dividerHeight="0dp"
         android:overScrollMode="ifContentScrolls"
         android:transcriptMode="alwaysScroll"
+        android:listSelector="@android:color/transparent"
         android:stackFromBottom="true"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_alignParentBottom="true"
-        android:layout_marginBottom="55dp" />
+        android:layout_marginBottom="56dp" />
+
+    <LinearLayout
+        android:id="@+id/info_layout"
+        android:layout_width="match_parent"
+        android:layout_height="60dp"
+        android:gravity="center"
+        android:background="#fcfcfc"
+        android:orientation="horizontal"
+        android:visibility="gone">
+
+        <TextView
+            android:id="@+id/info_text"
+            style="@style/ssom_font_13_5_red_pink_bold"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"/>
+        
+        <TextView
+            android:id="@+id/info_btn"
+            style="@style/ssom_font_16_white_bold_single"
+            android:layout_width="125dp"
+            android:layout_height="42.5dp"
+            android:layout_marginLeft="11dp"
+            android:background="@drawable/btn_write_apply_ssoa"
+            android:gravity="center"/>
+    </LinearLayout>
 </RelativeLayout>
