--- a/app/src/main/res/layout/fragment_chatting.xml
+++ b/app/src/main/res/layout/fragment_chatting.xml
@@ -61,7 +61,7 @@
         android:layout_width="match_parent"
         android:layout_height="60dp"
         android:gravity="center"
-        android:background="#fcfcfc"
+        android:background="#E6fcfcfc"
         android:orientation="horizontal"
         android:visibility="gone">
 
