--- a/app/src/main/res/drawable/bg_edit_underline_selected.xml
+++ b/app/src/main/res/drawable/bg_edit_underline_selected.xml
@@ -8,9 +8,9 @@
         <shape android:shape="rectangle" >
             <stroke
                 android:width="1dp"
-                android:color="@color/red_pink" />
+                android:color="@color/main_black" />
 
-            <solid android:color="@color/red_pink" />
+            <solid android:color="#00FFFFFF" />
 
             <padding
                 android:bottom="5dp"
