[Common] login 기능 연결 비정상동작 수정 - 메시지 업데이트 - 로그인 동작 드로워 연결

--- a/app/src/main/res/layout/fragment_login.xml
+++ b/app/src/main/res/layout/fragment_login.xml
@@ -7,7 +7,7 @@
     <FrameLayout
         android:layout_width="315dp"
         android:layout_height="185dp"
-        android:background="@drawable/login_top_png">
+        android:background="@drawable/login_top">
 
         <TextView
             style="@style/ssom_font_13_white_single"
