--- a/app/src/main/res/layout/fragment_regitst.xml
+++ b/app/src/main/res/layout/fragment_regitst.xml
@@ -7,7 +7,7 @@
     <FrameLayout
         android:layout_width="315dp"
         android:layout_height="185dp"
-        android:background="@color/red_pink">
+        android:background="@drawable/signup_top">
 
         <TextView
             style="@style/ssom_font_12_main_black_single"
