--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,20 +1,46 @@
 <!-- A DrawerLayout is intended to be used as the top-level content view using match_parent for both width and height to consume the full space available. -->
 <android.support.v4.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools" android:id="@+id/drawer_layout"
-    android:layout_width="match_parent" android:layout_height="match_parent"
+    xmlns:tools="http://schemas.android.com/tools"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    android:id="@+id/drawer_layout"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
     tools:context=".activity.MainActivity">
 
     <RelativeLayout
         android:layout_width="match_parent"
-        android:layout_height="match_parent">
+        android:layout_height="match_parent"
+        android:background="@color/white">
 
         <LinearLayout
             android:id="@+id/toolbar_layout"
-            android:layout_width="wrap_content"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:orientation="vertical">
 
             <include layout="@layout/ssom_toolbar"/>
+
+            <!--<android.support.design.widget.TabLayout-->
+                <!--android:id="@+id/tab_layout"-->
+                <!--android:layout_width="match_parent"-->
+                <!--android:layout_height="wrap_content"-->
+                <!--android:minHeight="53dp"-->
+                <!--app:tabIndicatorHeight="3dp"-->
+                <!--app:tabGravity="fill">-->
+
+                <!--<android.support.design.widget.TabItem-->
+                    <!--style="@style/ssom_font_16_gray_warm"-->
+                    <!--android:layout_width="180dp"-->
+                    <!--android:layout_height="50dp"-->
+                    <!--android:text="@string/title_tab_give"/>-->
+
+                <!--<android.support.design.widget.TabItem-->
+                    <!--style="@style/ssom_font_16_gray_warm"-->
+                    <!--android:layout_width="180dp"-->
+                    <!--android:layout_height="50dp"-->
+                    <!--android:text="@string/title_tab_take"/>-->
+
+            <!--</android.support.design.widget.TabLayout>-->
 
             <LinearLayout
                 android:id="@+id/tab_layout"
