--- a/app/src/main/res/layout/ssom_chat_message_item.xml
+++ b/app/src/main/res/layout/ssom_chat_message_item.xml
@@ -56,6 +56,7 @@
 
             <TextView
                 android:id="@+id/receive_time"
+                style="@style/ssom_font_9_pinkish_gray_single"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginLeft="10dp"
@@ -87,6 +88,7 @@
 
         <TextView
             android:id="@+id/send_time"
+            style="@style/ssom_font_9_pinkish_gray_single"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="right"
