[Common] 권한 체크기능 추가, 채팅 빈 메시지 들어가는 문제 수정 - 화면 resizing 추가 - 권한없을 경우 죽는 문제 해결 마시멜로 지원 80프로정도 완료

--- a/app/src/main/res/layout/view_custom_dialog.xml
+++ b/app/src/main/res/layout/view_custom_dialog.xml
@@ -43,9 +43,10 @@
 
             <TextView
                 android:id="@+id/dialogTextview"
-                style="@style/ssom_font_16_custom_666666_2_lines"
+                style="@style/ssom_font_16_custom_666666"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
+                android:maxLines="6"
                 android:visibility="gone" />
 
             <ListView
