--- a/app/src/main/res/layout/fragment_login.xml
+++ b/app/src/main/res/layout/fragment_login.xml
@@ -1,8 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<com.ssomcompany.ssomclient.widget.CustomLinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:orientation="vertical"
     android:layout_width="wrap_content"
-    android:layout_height="wrap_content">
+    android:layout_height="wrap_content"
+    android:fitsSystemWindows="true">
 
     <FrameLayout
         android:layout_width="315dp"
@@ -107,4 +108,4 @@
             android:text="@string/login_register"/>
     </RelativeLayout>
 
-</LinearLayout>
+</com.ssomcompany.ssomclient.widget.CustomLinearLayout>
