--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -219,6 +219,12 @@
         <item name="android:typeface">normal</item>
     </style>
 
+    <style name="ssom_font_16_custom_666666">
+        <item name="android:textSize">16sp</item>
+        <item name="android:textColor">@color/custom_666666</item>
+        <item name="android:typeface">normal</item>
+    </style>
+
     <style name="ssom_font_16_custom_666666_2_lines">
         <item name="android:textSize">16sp</item>
         <item name="android:textColor">@color/custom_666666</item>
